--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class='container intro'>
             <div class='header'>
               <label>Displaced in the Central African Republic</label>
-              <h1>One family’s journey of 600 kms</h1>
+              <h1>One family’s journey of 600 kilometers</h1>
             </div>
             <p>Violence broke out in the Central African Republic’s capital city, Bangui, in December 2013. The last six years of conflict have left 2.9 million people, almost half the population, in need of humanitarian assistance. Over 600,000 people are internally displaced, with 200,000 living in camps. Another 600,000 Central Africans live outside the country as refugees in Cameroon, Chad, the Democratic Republic of Congo and the Republic of Congo.</p>
             <p>Follow the story of Mohamed and his family as they flee Bangui and travel 594 kilometers in search of safety.</p>
@@ -37,30 +37,30 @@
         <div class='main'>
           <section class='step' id='segment1'>
             <h4>Displaced in Bangui</h4>
-            <p>Mohamed is married with eight children ranging in age from 2 to 15 years old. The family are living in Bangui in December 2013 when fighting breaks out. Their home and business are looted and destroyed by armed groups. The family take whatever personal belongings they can and leave their neighborhood in Galabadja. Many people go to religious sites for shelter. Mohamed and his family go to the Bangui Central Mosque.</p>
+            <p>Mohamed is married with eight children ranging in age from 2 to 15 years old. The family were living in Bangui in December 2013 when fighting broke out. Their home and business were looted and destroyed by armed groups. The family took whatever personal belongings they can and left their neighborhood in Galabadja. Many people went to religious sites for shelter. Mohamed and his family went to the Bangui Central Mosque.</p>
           </section>
 
           <section class='step' id='segment2'>
             <h4>Leaving Bangui for Bambari -- attacked in Sibut</h4>
-            <p>After two months at the Mosque, the family heads north in early 2014. They leave Bangui with a sense of relief, heading for the town of Bambari. This glimmer of hope is soon shattered when the convoy is attacked by armed men in the town of Sibut. During this incident, three people in the convoy are killed and Mohamed’s nine-year-old son is wounded. The travellers are devastated by these ruthless and arbitrary killings.</p>
+            <p>After two months at the Mosque, the family headed north in early 2014. They left Bangui with a sense of relief, heading for the town of Bambari. This glimmer of hope was soon shattered when the convoy was attacked by armed men in the town of Sibut. During this incident, three people in the convoy were killed and Mohamed’s nine-year-old son was wounded. The travellers were devastated by these ruthless and arbitrary killings.</p>
           </section>
 
           <section class='step' id='segment3'>
             <h4>Arriving in Bambari</h4>
-            <p>Mohamed and his family have never been to Bambari before. Upon arrival, they seek refuge at the Bornou Mosque which has become a site for internally displaced people (IDP). The family is registered by aid workers and become eligible for humanitarian assistance. They receive food rations, shelter kits and have access to basic healthcare services. With the little money he has, Mohamed eventually leaves the IDP site and rents a house. He hopes to start a new business and to enroll his children in school.</p> 
-            <p>Barely five months after their arrival, as the family is beginning to adjust, inter-communal violence breaks out in Bambari in July 2014. Bambari becomes a ghost town as people restrict movement to reduce the risk of getting hit by stray bullets. Life becomes unbearable for Mohamed and his family who soon run out of food.</p>
+            <p>Mohamed and his family have never been to Bambari before. Upon arrival, they sought refuge at the Bornou Mosque which had become a site for internally displaced people (IDP). The family was registered by aid workers and became eligible for humanitarian assistance. They received food rations, shelter kits and had access to basic healthcare services. With the little money he had, Mohamed eventually left the IDP site and rent a house. He hoped to start a new business and to enroll his children in school.</p> 
+            <p>Barely five months after their arrival, as the family was beginning to adjust, inter-communal violence broke out in Bambari in July 2014. Bambari became a ghost town as people restricted movement to reduce the risk of getting hit by stray bullets. Life became unbearable for Mohamed and his family who soon ran out of food.</p>
           </section>
 
           <section class='step' id='segment4'>
             <h4>Walking from Bambari to Bria</h4>
-            <p>After witnessing the killing of a neighbor at the Bambari market, Mohamed and his family decide to walk to Bria. This 200 kilometer journey takes three weeks. The family sleep in the bush and are exposed to natural hazards including torrential rainfall and mosquitos. Mohamed’s four-year-old daughter becomes ill with a high fever and malaria. She recovers after receiving treatment from a mobile clinic operated by a humanitarian organization.</p>
-            <p>Upon arrival in Bria, the family registers at one of the biggest sites in the country, known as PK3, which hosts over 50,000 internally displaced people. Most displaced people in Bria have moved several times due to repeated attacks. Mohamed’s family soon realise that inter-communal tensions are also a reality in Bria, affecting the free movement of civilians within neighborhoods.</p>
+            <p>After witnessing the killing of a neighbor at the Bambari market, Mohamed and his family decided to walk to Bria. This 200 kilometer journey took three weeks. The family slept in the bush and were exposed to natural hazards including torrential rainfall and mosquitos. Mohamed’s four-year-old daughter became ill with a high fever and malaria. She recovered after receiving treatment from a mobile clinic operated by a humanitarian organization.</p>
+            <p>Upon arrival in Bria, the family registered at one of the biggest sites in the country, known as PK3, which host over 50,000 internally displaced people. Most displaced people in Bria have moved several times due to repeated attacks. Mohamed’s family soon realised that inter-communal tensions were also a reality in Bria, affecting the free movement of civilians within neighborhoods.</p>
             <p>The PK3 site predominantly hosts Christians while Muslims live in the Bornou neighborhood. Both communities remain confined to their respective areas due to the fear of attacks.</p>
           </section>
 
           <section class='step' id='segment5'>
             <h4>Moving to Bornou</h4>
-            <p>New violence in parts of Bria in November 2016 forces Mohamed and his family to move again. This time they go to Bornou neighborhood where they will be among people from their religious group.</p>
+            <p>New violence in parts of Bria in November 2016 forced Mohamed and his family to move again. This time they went to Bornou neighborhood where they would be among people from their religious group.</p>
             <p>Since this outbreak of violence and its escalation in April and May 2017, humanitarian organizations are providing life saving assistance to affected people, particularly those in camps and staying with host communities. Despite many challenges, 17 humanitarian organizations are present in Bria.</p>
           </section>
         </div>
@@ -70,35 +70,34 @@
 
     <article>
       <div class='grid-container'>
-        <div class='col-12'>
+        <div class='col-8'>
           <div class='title'><h2>Life in Bria</h2></div>
-          <p>Mohamed and his family decide to stay in Bria which, as of May 2019, hosts over 90,000 internally displaced people. Watch the video to see what life is like for displaced people in Bria and listen to Rosaria Bruno, Deputy Head of Office for OCHA in CAR, talk about how humanitarian organizations are trying to help. Also meet Didier, whose story is similar to that of Mohamed and his family.</p>
-          
+          <p>Mohamed and his family decided to stay in Bria which, as of May 2019, hosts over 90,000 internally displaced people. Watch the video to see what life is like for displaced people in Bria and listen to Rosaria Bruno, Deputy Head of Office for OCHA in CAR, talk about how humanitarian organizations are trying to help. Also meet Didier, whose story is similar to that of Mohamed and his family.</p>
+        </div>
+        
+        <div class='col-12'>
           <div class='video-container'>
             <video id='droneVideo' controls muted='muted'>
-              <source src='assets/video2.mp4' type='video/mp4'>
+              <source src='assets/car-video2.mp4' type='video/mp4'>
               Your browser does not support the video tag.
             </video>
-            <p class='small'><i>Credit: OCHA</i></p>
+            <p class='small'><i>Credit: OCHA CAR</i></p>
           </div>
         </div>
 
-
-        <div class='col-12'>
+        <div class='col-8'>
           <div class='title'><h2>Humanitarian access constraints</h2></div>
-        </div>
-        <div class='col-5'>
           <p>Access constraints continue to hinder humanitarians from reaching the most vulnerable people in need of assistance. CAR remains one of the most dangerous countries in the world for humanitarians. Violence perpetrated by armed groups is also directed against humanitarian actors and their facilities.</p>
           <p>Acts of violence, looting and attacks against humanitarian organizations persists countrywide. Already in 2019, three humanitarian staff have been killed. During the first four months of the year, there were 111 incidents recorded on humanitarian staff or goods. Bambari, Batangafo, Bria and Kaga-Bandoro are the most affected areas.</p>
-        </div>
-        <div class='col-7'>
           <img src='assets/roads.jpg' />
         </div>
 
-        <div class='col-12'>
+        <div class='col-8'>
           <div class='title'><h2>Responding to the needs of Central Africans</h2></div>
           <p>The <a href='https://www.humanitarianresponse.info/sites/www.humanitarianresponse.info/files/2019/02/2018_hrp_CAR_english_final_0.pdf' target='_blank'>2019 Humanitarian Response Plan</a> asks for $430.7 million to cover the needs of 1.7 million Central Africans. As of June 2019, it is 40 percent funded ($170.5 million).</p>
+        </div>
 
+        <div class='col-12'>
           <div class='slideshow'>
             <div><img data-lazy='assets/slideshow/1.jpg' title='Credit: Florent Vergnes/OCHA CAR'></div>
             <div><img data-lazy='assets/slideshow/2.jpg' title='Credit: Florent Vergnes/OCHA CAR'></div>
@@ -106,6 +105,9 @@
             <div><img data-lazy='assets/slideshow/4.jpg' title='Credit: Adrienne Surprenant/ OCHA CAR'></div>
             <div><img data-lazy='assets/slideshow/5.jpg' title='Credit: Adrienne Surprenant/ OCHA CAR'></div>
             <div><img data-lazy='assets/slideshow/6.jpg' title='Credit: Adrienne Surprenant/ OCHA CAR'></div>
+            <div><img data-lazy='assets/slideshow/7.jpg' title='Credit: Adrienne Surprenant/ OCHA CAR'></div>
+            <div><img data-lazy='assets/slideshow/8.jpg' title='Credit: Adrienne Surprenant/ OCHA CAR'></div>
+            <div><img data-lazy='assets/slideshow/8.jpg' title='Credit: Florent Vergnes/OCHA CAR'></div>
           </div>
         </div>
 
@@ -118,7 +120,7 @@
           <ul class='stats'>
             <li><span>594 km</span><br>Total distance</li>
             <li><span>332,320 steps</span><br>Walking steps</li>
-            <li><span>XX</span><br>Duration</li>
+            <li><span>2 years 9 months</span><br>Duration</li>
           </ul>
           <p class='small'>Acknowledgements: This data story was developed by OCHA’s Centre for Humanitarian Data in The Hague. The Centre worked closely with OCHA Central African Republic to develop the narrative and to ensure the figures and timeline are accurate. The story is based on actual experiences of displaced people in the Central African Republic, although the name Mohamed is fictional.</p>
         </div>
